--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.3.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
